--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,99 @@ jobs:
         run: ./run.sh
         working-directory: integration-tests
 
+  run-tests-db:
+    name: Build and test DORM with external DB
+    runs-on: ubuntu-latest
+    needs: run-tests
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - image: mariadb:10.9
+            health_cmd: "mysqladmin ping"
+            config: mysql.toml
+            compiler: dmd-latest
+          - image: mariadb:10.6
+            health_cmd: "mysqladmin ping"
+            config: mysql.toml
+            compiler: dmd-latest
+          - image: postgres:15
+            health_cmd: pg_isready
+            config: postgres.toml
+            compiler: dmd-latest
+          - image: postgres:13
+            health_cmd: pg_isready
+            config: postgres.toml
+            compiler: dmd-latest
+          - image: postgres:11
+            health_cmd: pg_isready
+            config: postgres.toml
+            compiler: dmd-latest
+          - image: mariadb:10.9
+            health_cmd: "mysqladmin ping"
+            config: mysql.toml
+            compiler: ldc-latest
+          - image: mariadb:10.6
+            health_cmd: "mysqladmin ping"
+            config: mysql.toml
+            compiler: ldc-latest
+          - image: postgres:15
+            health_cmd: pg_isready
+            config: postgres.toml
+            compiler: ldc-latest
+          - image: postgres:13
+            health_cmd: pg_isready
+            config: postgres.toml
+            compiler: ldc-latest
+          - image: postgres:11
+            health_cmd: pg_isready
+            config: postgres.toml
+            compiler: ldc-latest
+
+    services:
+      database:
+        image: ${{ matrix.image }}
+        env:
+          POSTGRES_USER: username
+          POSTGRES_PASSWORD: password
+          POSTGRES_DB: db
+          MARIADB_USER: username
+          MARIADB_PASSWORD: password
+          MARIADB_DATABASE: db
+          MARIADB_RANDOM_ROOT_PASSWORD: yes
+        ports:
+          - 127.0.0.1:5432:5432/tcp
+          - 127.0.0.1:3306:3306/tcp
+        options: >-
+          --health-cmd="${{ matrix.health_cmd }}"
+          --health-interval 5s
+          --health-timeout 3s
+          --health-retries 3
+
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: recursive
+
+      - uses: dlang-community/setup-dlang@v1
+        with:
+          compiler: ${{ matrix.compiler }}
+
+      - name: Build & test dorm
+        run: dub build && dub test
+
+      - name: Build test app
+        run: dub build
+        working-directory: testapp
+
+      - name: Prepare the integration tests
+        run: for i in $(find -maxdepth 1 -type d); do cp -v ../.github/${{ matrix.config }} $i/database.toml; done
+        working-directory: integration-tests
+
+      - name: Run integration tests
+        run: ./run.sh
+        working-directory: integration-tests
+
   lint:
     name: Lint
     runs-on: ubuntu-latest
