exclude macos dmd from CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,9 @@ jobs:
         compiler:
           - dmd-latest
           - ldc-latest
+        exclude:
+          - os: macos-latest
+            compiler: dmd-latest
     steps:
       - uses: actions/checkout@v3
         with:
