--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -134,12 +134,8 @@ jobs:
         if: ${{ matrix.config == 'postgres' }}
         run: sudo apt update && sudo apt install postgresql-client
 
-      - name: Build & test dorm
-        run: dub build && dub test
-
-      - name: Build test app
-        run: dub build
-        working-directory: testapp
+      - name: Test dorm
+        run: dub test
 
       - name: Prepare the integration tests
         run: |
